ghc-4335c07/testsuite/tests/typecheck/should_compile/T14396f.hs
{-# LANGUAGE TypeFamilies #-}
module T14396f where
type family F a
