ghc-4335c07/testsuite/tests/typecheck/should_fail/TcNullaryTCFail.hs
{-# LANGUAGE MultiParamTypeClasses #-}
module TcNullaryTCFail where

class A
instance A
instance A
